# ai-factory

./: .env.example  .gitignore  README.md  firebase.json  run.sh  run_all.sh
.agents/workflows/: rescue.md
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
ai_notice/: api_evolution.md  dual_platform_integration.md  essentials.md  pits_and_learnings.md  platform_development_guide.md  rescue_skills.md  social_tech_highlights.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  orchestrator.py  social.py  studio.py  system.py
backend/app/core/: config.py  db.py  firebase_config.py  orchestrator.py  pubsub.py  ws_manager.py
backend/app/models/: factory.py
docker/: docker-compose.db.yml  docker-compose.monitoring.yml  docker-compose.traefik.yml  prometheus.yml  traefik_dynamic.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/assets/: index-B-zACnRd.js  index-BxMApIBp.css
frontend/public/studio/ai-speech-text/: README.md  index.html
frontend/public/studio/ai-speech-text/assets/: index-Bf3obcIT.css  index-BtxRGsZf.js
frontend/public/studio/ai-speech-text/src/: App.tsx
frontend/public/studio/ai-web-stt/: index.html  package-lock.json
frontend/public/studio/neon-tetris-elite/: index.html  metadata.json
frontend/src/: App.jsx  firebase.js  index.css
frontend/src/components/: LandingPage.jsx  LoginPage.jsx  ProjectViewer.jsx  SocialPanel.jsx
frontend/src/store/: useStore.js
scripts/: catch_tunnel.sh  share_ngrok.py
(+41 files in other folders)
